<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/the_string_is" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/the_result_is" />

        <EditText
            android:id="@+id/et_email_debounce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email" />

        <Button
            android:id="@+id/b_just"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/just" />

        <Button
            android:id="@+id/b_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from" />

        <Button
            android:id="@+id/b_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />

        <Button
            android:id="@+id/b_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/range" />

        <Button
            android:id="@+id/b_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last" />

        <Button
            android:id="@+id/b_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter" />

        <Button
            android:id="@+id/b_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_delay" />

        <Button
            android:id="@+id/b_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map" />

        <Button
            android:id="@+id/b_flat_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flat_map" />

        <Button
            android:id="@+id/b_merge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge" />

        <Button
            android:id="@+id/b_combined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combined_map_filter" />

    </LinearLayout>
</ScrollView>